Contact Page and profile pics load

--- a/src/SolarSystem/Tabs/ContactCard.css
+++ b/src/SolarSystem/Tabs/ContactCard.css
@@ -35,6 +35,8 @@
   
 .contact-text-container {
     width: 40%;
+    justify-content: left;
+    text-align: left;
 }
   
 .contact-buttons-container {
