--- a/src/SolarSystem/Tabs/ContactCard.css
+++ b/src/SolarSystem/Tabs/ContactCard.css
@@ -1,18 +1,12 @@
-:root {
-    --whiteColor: rgb(255, 255, 255);
-    --lightPurple:rgb(255, 208, 249);
-    --midPurple:rgb(138, 43, 226);
-    --darkPurple: rgb(68, 0, 131);
-  }
-
 .contact-container {
-    display: flex;
+    display:inline-flex;
     background-color: white;
-    padding: 20px;
-    border: 1px solid #ccc;
+    padding: 10px;
+    width: 85vw;
+    border: 1px solid var(--darkPurple);
     border-radius: 10px;
     text-align: center;
-    margin-bottom: 20px;
+    margin-bottom: 10px;
   }
 .contact-image-container,
 .contact-ext-container,
@@ -21,7 +15,7 @@
     vertical-align: middle; /* To vertically align the content */
 }
 .contact-image-container {
-    width: 30%;
+    width: 75%;
     padding-right: 10px;
 }
   
@@ -34,18 +28,18 @@
 }
   
 .contact-text-container {
-    width: 40%;
+    width: 35%;
     justify-content: left;
     text-align: left;
 }
   
 .contact-buttons-container {
-    width: 30%;
+    width: 325%;
     text-align: right;
 }
 
 .contact-buttons-container button {
-    margin-left: 10px;
+    margin-left: 5px;
     padding: 1vh 1vh 0vh 1vh;
     background-color: var(--darkPurple);
     font-family: 'Borel', sans-serif;
